updated with images for 'featured projects' section, removed redundant animations

--- a/index.html
+++ b/index.html
@@ -52,42 +52,52 @@
       <h2 class="portfolio-header">
         Featured projects
       </h2>
+
       <div class="portfolio-boxes">
         <div class="portfolio-box">
           <a class="" target="_blank" href="https://github.com/farhanzam/fork-ragman-frontend">
             <div class="portfolio-image-box">
-              <img class="" src="" alt="image of Ragman Frontend" />
+              <img class="portfolio-image" src="./assets/RagmanChatbotUI.jpg" alt="Ragman Frontend" />
             </div>
           </a>
           <p class="portfolio-image-text">Ragman: software infrastructure for AI assistants</p>
         </div>
+
         <div class="portfolio-box">
           <a class="" target="_blank" href="https://github.com/farhanzam/IdentifyElectrifiedSettlements">
             <div class="portfolio-image-box">
-              <img class="" src="" alt="image of project" />
+              <img class="portfolio-image" src="./assets/SegmentationSample.png" alt="Non-electrified Settlement Detection" />
             </div>
           </a>
-          <p class="portfolio-image-text">Dataset preprocessing and visualization: Identifying non-electrified regions</p>
+          <p class="portfolio-image-text">Non-electrified Settlement Detection</p>
         </div>
+
         <div class="portfolio-box">
           <a class="" target="_blank" href="https://github.com/farhanzam/Chat-Connect">
             <div class="portfolio-image-box">
-              <img class="" src="" alt="image of Chat Connect" />
+              <img class="portfolio-image" src="./assets/ChatConnectLobby.png" alt="ChatConnect Lobby" />
             </div>
           </a>
           <p class="portfolio-image-text">ChatConnect: peer-to-peer chat service</p>
         </div>
+
         <div class="portfolio-box">
-          <div class="portfolio-image-box"></div>
+          <a class="" target="_blank" href="https://github.com/toeeeee/searchengine121">
+            <div class="portfolio-image-box">
+              <img class="portfolio-image" src="./assets/SearchEngineGitHub.png" alt="Search Engine" />
+            </div>
+          </a>
           <p class="portfolio-image-text">Search engine: Corpus Indexing and Ranking Search</p>
         </div>
+
       </div>
-      <a class="portfolio-portfolio-redirect-button" target="_blank" href="https://docs.google.com/document/d/1ZssBd7Tsf0MzW7b-n3hhJlamEoDVq2AWkhRyU4TWKPY/edit?usp=sharing">
+
+      <a class="portfolio-resume-button" target="_blank" href="https://docs.google.com/document/d/1ZssBd7Tsf0MzW7b-n3hhJlamEoDVq2AWkhRyU4TWKPY/edit?usp=sharing">
         See Resume ⊳
       </a>
     </div>
 
-    <div class="footer">
+    <div id="contact">
       <div class="footer-contact">
         <a class="footer-contact-icons" href="https://github.com/farhanzam" target="_blank">
           <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="50" height="50" viewBox="0 0 48 48">
